Fix Vercel 500 - use /tmp paths and fix image routing

--- a/templates/index.html
+++ b/templates/index.html
@@ -181,7 +181,7 @@
     <div class="gallery-grid">
         {% for image in images %}
         <div class="image-card">
-            <img src="{{ url_for('static', filename='uploads/' + image['filename']) }}"
+            <img src="{{ url_for('uploaded_file', filename=image['filename']) }}"
                  alt="{{ image['original_name'] }}"
                  onclick="openLightbox(this.src)"
                  title="Click to preview">
